examples/non-examples/no-type-case-matched.golden
Error at phase p0:
    No case matched at no-type-case-matched.kl:12.14-14.29: String
